@@ -180,21 +180,18 @@ if [ $# -eq 5 ]; then
     AUDIO1=$(($5 +  1))
 
     echo $1 > $JOBFILE
-    echo 2 > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/stages-counter
+    echo 1 > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/stages-counter
 
-    echo 32152 > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/stages-descriptions
-    echo 32153 >> ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/stages-descriptions
+    echo 32160 > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/stages-descriptions
 
     echo 1 > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/stages-current
-    echo $2/$3.mkv > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/progress-files
+    echo $2/$3.mp4 > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/progress-files
 
     echo
     echo INFO starting HandBrakeCLI
 
     (
-     HandBrakeCLI -i $1 /dev/sr0 -o $2/$3.mkv -t $4 -f mkv -m -S 1200 -e x264 -2 \
-     -T -x ref=3:mixed-refs:bframes=6:b-pyramid=1:bime=1:b-rdo=1:weightb=1:analyse=all:8x8dct=1:subme=6:me=um h:merange=24:filter=-2,-2:ref=6:mixed-refs=1:t$
-     -a $AUDIO1 -E ac3 &
+     HandBrakeCLI -i $1 -o $2/$3.mp4 -t $4 -f mp4 -m -q 1.0 -a $AUDIO1 -E ac3 &
     ) > $OUT_TRANS 2>&1 &
 
     echo INFO HandBrakeCLI command executed
@@ -207,47 +204,29 @@ if [ $# -eq 5 ]; then
     PID=$(ps axu | grep HandBrakeCLI | grep -v grep |awk '{print $2}') 
 
     echo
-    echo INFO processing data pass 1 of 2
+    echo INFO processing data pass 1 of 1
     echo
 
     LOOP=1
     while [ $LOOP -eq '1'  ];
     do
       echo -n .
-      PASS1=$(strings $OUT_TRANS | tail -1 | grep Encoding | grep "1 of 2" | tail -1 | awk '{print $6}' | cut -d '.' -f1 )
-      PASS2=$(strings $OUT_TRANS | tail -1 | grep Encoding | grep "2 of 2" | tail -1 | awk '{print $6}' | cut -d '.' -f1 )
+      PASS1=$(strings $OUT_TRANS | tail -1 | grep Encoding | grep "1 of 1" | tail -1 | awk '{print $6}' | cut -d '.' -f1 )
       if [ -n "$PASS1" ] ; then
          echo $PASS1 > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/progress 
          if [ $PASS1 -eq 99 ] ; then
 
             echo
             echo
-            echo INFO processing data pass 1 of 2 done
+            echo INFO processing data pass 1 of 1 done
             echo
 
+            sleep 35
+            echo 100 > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/progress 
+            echo DONE > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/progress-done
             echo
-            echo INFO processing data pass 2 of 2
             echo
-
-            sleep  5
-            echo 100 > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/progress
-            sleep 1
-            echo 0 > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/progress
-            echo 2 > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/stages-current
-         fi
-      fi
-
-      if [ -n "$PASS2" ] ; then
-         echo $PASS2 > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/progress
-         if [ $PASS2 -eq 98 ] ; then
-             sleep 15
-             echo 100 > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/progress 
-             echo DONE > ~/.xbmc/userdata/addon_data/script.video.swiss.army.knife/progress/progress-done
-             echo
-             echo
-             echo INFO processing data pass 2 of 2 done
-             echo
-             LOOP=0
+            LOOP=0
          fi
       fi
       sleep 0.7
@@ -282,7 +261,7 @@ if [ $# -eq 7 ]; then
        echo INFO starting HandBrakeCLI
 
        (
-       HandBrakeCLI -i $1 /dev/sr0 -o $2/$3.mkv -t $4 -f mkv -m -S 1200 -e x264 -2 \
+       HandBrakeCLI -i $1 -o $2/$3.mkv -t $4 -f mkv -m -S 1200 -e x264 -2 \
        -T -x ref=3:mixed-refs:bframes=6:b-pyramid=1:bime=1:b-rdo=1:weightb=1:analyse=all:8x8dct=1:subme=6:me=um h:merange=24:filter=-2,-2:ref=6:mixed-refs$
        -a $AUDIO1,$AUDIO2 -A "Audio-1","Audio-2" -B auto,160 \
        -R auto,auto -6 auto,auto -E ac3,acc &
@@ -419,7 +398,7 @@ if [ $# -eq 7 ]; then
        echo INFO starting HandBrakeCLI
 
        (
-       HandBrakeCLI -i $1 /dev/sr0 -o $2/$3.mkv -t $4 -f mkv -m -S 1200 -e x264 -2 \
+       HandBrakeCLI -i $1 -o $2/$3.mkv -t $4 -f mkv -m -S 1200 -e x264 -2 \
        -T -x ref=3:mixed-refs:bframes=6:b-pyramid=1:bime=1:b-rdo=1:weightb=1:analyse=all:8x8dct=1:subme=6:me=um h:merange=24:filter=-2,-2:ref=6:mixed-refs=$
        -a $AUDIO1 -E ac3 &
        ) > $OUT_TRANS 2>&1 &
@@ -550,7 +529,7 @@ if [ $# -eq 9 ]; then
      echo INFO starting HandBrakeCLI
 
      (
-     HandBrakeCLI -i $1 /dev/sr0 -o $2/$3.mkv -t $4 -f mkv -m -S 1200 -e x264 -2 \
+     HandBrakeCLI -i $1 -o $2/$3.mkv -t $4 -f mkv -m -S 1200 -e x264 -2 \
      -T -x ref=3:mixed-refs:bframes=6:b-pyramid=1:bime=1:b-rdo=1:weightb=1:analyse=all:8x8dct=1:subme=6:me=um h:merange=24:filter=-2,-2:ref=6:mixed-refs=1:t$
      -a $AUDIO1,$AUDIO2 -A "Audio-1","Audio-2" -B auto,160 -R auto,auto -6 auto,dpl2 -E ac3,acc &
      ) > $OUT_TRANS 2>&1 &
